[project]
name = "Project-03_JARVIS"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtts>=2.5.4",
    "openai>=1.102.0",
    "pocketsphinx>=5.0.4",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "setuptools>=80.9.0",
    "speechrecognition>=3.14.3",
]
